--- a/package.json
+++ b/package.json
@@ -22,16 +22,19 @@
     "@sanity/image-url": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "disqus-react": "^1.1.5",
     "lucide-react": "^0.462.0",
-    "next": "15.0.3",
+    "next": "15.0.4",
     "next-sanity": "^9.8.20",
     "next-themes": "^0.4.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-refractor": "^3.1.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
