--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "disqus-react": "^1.1.5",
     "lucide-react": "^0.462.0",
     "next": "15.0.4",
+    "next-intl": "^3.26.3",
     "next-sanity": "^9.8.20",
     "next-themes": "^0.4.3",
     "react": "19.0.0-rc-66855b96-20241106",
