--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-refractor": "^3.1.1",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
