--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-refractor": "^3.1.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
