--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@react-spring/web": "^9.7.5",
     "@sanity/image-url": "^1.1.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
@@ -30,12 +31,14 @@
     "clsx": "^2.1.1",
     "disqus-react": "^1.1.5",
     "lucide-react": "^0.462.0",
+    "motion": "^11.15.0",
     "next": "15.0.4",
     "next-intl": "^3.26.3",
     "next-sanity": "^9.8.20",
     "next-themes": "^0.4.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-intersection-observer": "^9.14.0",
     "react-refractor": "^3.1.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
