--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nehno",
-  "version": "2.2.0",
+  "version": "2.3.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -30,7 +30,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "disqus-react": "^1.1.5",
-    "lucide-react": "^0.462.0",
+    "lodash.debounce": "^4.0.8",
+    "lucide-react": "^0.469.0",
     "motion": "^11.15.0",
     "next": "15.0.4",
     "next-intl": "^3.26.3",
@@ -38,6 +39,7 @@
     "next-themes": "^0.4.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.14.0",
     "react-refractor": "^3.1.1",
     "tailwind-merge": "^2.5.5",
@@ -47,6 +49,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
