--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/react": "^2.0.108",
     "@langchain/core": "^0.3.30",
     "@langchain/langgraph": "^0.2.39",
     "@langchain/openai": "^0.3.17",
@@ -42,12 +43,12 @@
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.469.0",
     "motion": "^11.15.0",
-    "next": "15.2.4",
-    "next-intl": "^3.26.3",
+    "next": "^16.0.7",
+    "next-intl": "^4.5.8",
     "next-sanity": "^9.8.20",
     "next-themes": "^0.4.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.14.0",
     "react-refractor": "^3.1.1",
