--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "date-fns": "^4.1.0",
     "disqus-react": "^1.1.5",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.469.0",
@@ -46,12 +47,13 @@
     "next": "^16.0.10",
     "next-intl": "^4.5.8",
     "next-sanity": "^9.8.20",
-    "next-themes": "^0.4.3",
+    "next-themes": "^0.4.6",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.14.0",
     "react-refractor": "^3.1.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.5",
