--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/react": "^2.0.108",
+    "@ai-sdk/openai": "^3.0.2",
+    "@ai-sdk/react": "^3.0.6",
     "@langchain/core": "^0.3.80",
     "@langchain/langgraph": "^0.2.39",
     "@langchain/openai": "^0.3.17",
+    "@openrouter/ai-sdk-provider": "^1.5.4",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.3",
@@ -28,19 +30,19 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
-    "@react-spring/web": "^9.7.5",
+    "@react-spring/web": "^10.0.3",
     "@sanity/image-url": "^1.1.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "@tanstack/react-query": "^5.62.11",
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
-    "ai": "^4.0.36",
+    "ai": "^6.0.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
-    "disqus-react": "^1.1.5",
+    "disqus-react": "^1.1.7",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.469.0",
     "motion": "^11.15.0",
@@ -48,8 +50,8 @@
     "next-intl": "^4.5.8",
     "next-sanity": "^12.0.8",
     "next-themes": "^0.4.6",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.14.0",
     "react-refractor": "^3.1.1",
